artifacts/yamls/examples/network_policy/network_policy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:
  name: test-network-policy
  namespace: default

spec:
  podSelector:
    matchLabels:
      role: db

  policyTypes:
    - Ingress

    - Egress

  ingress:
    - from:
        - ipBlock:
            cidr: 172.17.0.0/16

            except:
              - 172.17.1.0/24

        - namespaceSelector:
            matchLabels:
              project: myproject

        - podSelector:
            matchLabels:
              role: frontend

      ports:
        - protocol: TCP

          port: 6379

  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.1/32
        - ipBlock:
            cidr: 10.0.0.2/32
        - ipBlock:
            cidr: 10.0.0.3/32
        - ipBlock:
            cidr: 10.0.0.4/32
        - ipBlock:
            cidr: 10.0.0.5/32
        - ipBlock:
            cidr: 10.0.0.6/32
        - ipBlock:
            cidr: 10.0.0.7/32

      ports:
        - protocol: TCP

          port: 5978
